--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,4 @@ clean:
 	rm -f minivtun *.o
 
 up:
-	make clean
-	rsync ../ root@w.rssn.cn:minivtun/ -av --exclude=rsync.sh
-	rsync ../ root@192.168.5.56:minivtun/ -av --exclude=rsync.sh
-	make
+	rsync ../ root@rssn.cn:minivtun/ -av  --exclude='*.o' --exclude='minivtun'
