Fix a infinite loop bug.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 #
 # Copyright (c) 2015 Justin Liu
 # Author: Justin Liu <rssnsj@gmail.com>
-# https://github.com/rssnsj/network-feeds
+# https://github.com/rssnsj/minivtun
 #
 
 CC ?= gcc
 CFLAGS ?= -Wall
-HEADERS = minivtun.h library.h list.h
+HEADERS = minivtun.h library.h list.h jhash.h
 
 minivtun: minivtun.o library.o server.o client.o
 	$(CC) $(LDFLAGS) -o $@ $^ -lcrypto
