--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,10 @@
 # https://github.com/rssnsj/minivtun
 #
 
+ifeq ($(PREFIX),)
+PREFIX := $(shell [ -d /opt/local ] && echo /opt/local || echo /usr )
+endif
+
 CC ?= gcc
 CFLAGS += -Wall -Wno-deprecated
 HEADERS = minivtun.h library.h list.h jhash.h
@@ -15,7 +19,7 @@ minivtun: minivtun.o library.o server.o client.o
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 install: minivtun
-	cp -f minivtun /usr/sbin/
+	cp -f minivtun $(PREFIX)/sbin/
 
 clean:
 	rm -f minivtun *.o
